2015-05-12 Jochen Meyer <jomeyer@mail.cern.ch>
	* addressing coverity defect 12434 (again)
	* copy-paste bug fix
	* Tagged as CalibNtupleUtils-00-00-23

2015-05-04 Jochen Meyer <jomeyer@mail.cern.ch>
	* addressing coverity defects 12674, 12434
	* Tagged as CalibNtupleUtils-00-00-22

2014-09-17 Jochen Meyer <jomeyer@mail.cern.ch>
        * fixing compiler warning
        * Tagged as CalibNtupleUtils-00-00-21

2014-07-16 David Quarrie <David.Quarrie@cern.ch>
	* cmt/requirements
		Another iteration at declaring the required ROOT components for cmake
	* Tagged as CalibNtupleUtils-00-00-20

2014-07-16 David Quarrie <David.Quarrie@cern.ch>
	* cmt/requirements
		Declare the ROOT components that are required (only relevant for cmake - invisible to CMT)
	* Tagged as CalibNtupleUtils-00-00-19

10-03-2011  Felix Rauscher <rauscher@cern.ch>
	* Coverity
	* remove unused code
	* tagging  CalibNtupleUtils-00-00-18

23-10-2010 Felix Rauscher <rauscher@cern.ch>
	* covertity
	* tagging CalibNtupleUtils-00-00-17

19-05-2010 Felix Rauscher <rauscher@cern.ch>
	* fix warnings
	* tagging CalibNtupleUtils-00-00-16

18-02-2009 Felix Rauscher <rauscher@cern.ch>
	* fix compiler warnings
	* tagging CalibNtupleUtils-00-00-15

22-12-2008 David Quarrie <David.Quarrie@cern.ch>
	* src/HistHandler.cxx:  )
	* src/SegmentCombi.cxx: ) Add gcc 4.3 compatibility
	* src/TimedSegment.cxx: ) 
	* tagging CalibNtupleUtils-00-00-14

18-05-2008 Zdenko van Kesteren <zkestere@nikhef.nl>
	* added Hist-retrieval methods with std::string as argument to HistHandler
	* tagging CalibNtupleUtils-00-00-13

20-04-2008 Zdenko van Kesteren <zkestere@nikhef.nl>
	* added option to RootDisplay to draw half lines
	* tagging CalibNtupleUtils-00-00-12

10-01-2008 Jochem Snuverink <jsnuverink@nikhef.nl>
	* HistHandler: add method for weighting
	* tagging CalibNtupleUtils-00-00-11

10-12-2007 David Quarrie <David.Quarrie@cern.ch>
	* src/RootDisplay.cxx: Include <math.h> for compatibility with LCG_54